fix(widget): make API client safe on minSdk 26